# The_Matrix_Refactored

./: .gitignore  .gitmodules  CMakeLists.txt  MtxMult.cpp  MtxMultArb.cpp  MtxMultTrans.cpp  MtxMultTransArbSize.cpp  MtxMultTransManual.cpp  README.md
include/: similarityImplementations.hpp
include/benchmarks/: eigenSimilarity.h  similarity.hpp  similarityHeader.h  similarityTripleLoop.h  similarityTripleLoopInit.h  similarityTripleLoopRef.h  similarityTripleLoopRefInit.h  smatrixSimilarity.h
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  benchmark.cpp  config.h.in
